Fixed some spacing issues in mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -801,7 +801,7 @@
 
 .grid {
     width: 250px;
-    height: 200px;
+    height: 160px;
     margin: 10px 40px 20px 10px;
     display: inline-block;
     vertical-align: top;
@@ -903,7 +903,7 @@
         #title {
             background: #E6E6E6 url('/static/img/Main-Header.jpg');
             background-size: cover;
-            margin-top: 120px;
+            margin-top: 70px;
         }
         .video_bg {
             display:none;
